--- a/styles/style.css
+++ b/styles/style.css
@@ -457,7 +457,7 @@ body {
     color: #ffffff;
 }
 
-/* Адаптивність для мобільних пристроїв */
+/* Адаптив для мобільних пристроїв */
 @media (max-width: 768px) {
     .footer__container {
         flex-direction: column;
@@ -555,7 +555,7 @@ body {
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-/* Анімація бургер-меню при відкритті */
+
 .header__burger.open .header__burger-line:nth-child(1) {
     transform: rotate(45deg) translateY(8px);
     background-color: green;
@@ -626,7 +626,7 @@ body {
     transform: translateY(0);
 }
 
-/* Стилізація для дропдауну */
+/* Випадаючий список */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -643,7 +643,7 @@ body {
     transition: background-color 0.3s ease;
 }
 
-/* Стрілка вниз */
+
 .dropdown__button::after {
     content: '\2193';
     font-weight: 400;
@@ -663,7 +663,6 @@ body {
     z-index: 1;
 }
 
-/* Стилі для посилань у дропдауні */
 .dropdown__content a {
     color: black;
     padding: 12px 16px;
@@ -676,7 +675,7 @@ body {
     background-color: #ddd;
 }
 
-/* Показати контент при ховері */
+
 .dropdown:hover .dropdown__content {
     display: block;
     visibility: visible;
@@ -684,7 +683,7 @@ body {
 }
 
 
-/* Покращення для плавності */
+
 .dropdown__content {
     transition: opacity 0.3s ease, visibility 0s 0.3s;
 }
@@ -708,7 +707,6 @@ body {
     border-radius: 5px;
     overflow: hidden;
     background: #52258800;
-    /* Темно-фіолетовий фон */
     color: #fff;
 
 }
@@ -730,7 +728,6 @@ body {
 
 .accordion-header:hover {
     background: #3e1a5b;
-    /* Світліший відтінок для наведення */
 }
 
 .accordion-content {
@@ -739,7 +736,6 @@ body {
     transition: max-height 0.4s ease, padding 0.3s ease;
     padding: 0 15px;
     background: #2a103d;
-    /* Фон для контенту */
     color: #fff;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -751,31 +747,23 @@ body {
 
 .accordion-item.active .accordion-content {
     max-height: 200px;
-    /* Можна змінити для різних секцій */
     padding: 15px;
 }
 
 .accordion-item.active .accordion-header {
     background: #3e1a5b;
-    /* Інший акцентний фон для активного стану */
 }
 
 .accordion-header::after {
     content: '↓';
-    /* Стрілка вниз */
     position: absolute;
     right: 30px;
-    /* Відступ праворуч */
     top: 50%;
-    /* Центрування по вертикалі */
     transform: translateY(-50%);
     font-size: 25px;
-    /* Розмір стрілки */
     transition: transform 0.3s ease;
-    /* Анімація для обертання */
 }
 
 .accordion-header.active::after {
     transform: translateY(-50%) rotate(180deg);
-    /* Поворот на 180 градусів */
 }
